--- a/WebContent/html5/users/menu.html
+++ b/WebContent/html5/users/menu.html
@@ -46,12 +46,12 @@
             <nav class="menu">
                 <ul>
                     <li><a class="principal" href="home.html"><span class="glyphicon glyphicon-home"></span> HOME</a></li>
-                    <li><a class="principal"><span class="glyphicon glyphicon-apple"></span> PRODUTO</a>
+                    <!-- <li><a class="principal"><span class="glyphicon glyphicon-apple"></span> PRODUTO</a>
                         <ul>
                             <li><a class="sub" href="newproduto.html">CADASTRO DE PRODUTOS</a></li>
                             <li><a class="sub" href="produtos.html">LISTAR PRODUTOS</a></li>
                         </ul>
-                    </li>
+                    </li> -->
                     <li><a class="principal"><span class="glyphicon glyphicon-shopping-cart"></span> PEDIDO</a>
                         <ul>
                             <li><a class="sub" href="newpedido.html">GERAR PEDIDO</a></li>
