--- a/WebContent/html5/admin/newuser.html
+++ b/WebContent/html5/admin/newuser.html
@@ -7,31 +7,27 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 	<script src="../../js/jquery/jquery-2.1.4.min.js" type="text/javascript"></script>
 	<script src="../../js/jquery/jquery.serializejson.js"	type="text/javascript"></script>
+	<link rel="stylesheet" type="text/css" href="../../css/newuser.css">
 </head>
     <body>
     	<div id="header"></div>
         <div class="container">
         	<div><h2>Cadastro de Usuário</h2><br></div>
-         	<form id="form" class="form-horizontal" action="../../VQ/user/createform" method="GET">
-                <div class="form-group">
-                    <label for="inputName" style="margin-top:6px;">Email</label>
-                    <div class="col-sm-5">                  
-                        <input type="email" class="form-control" id="email" name="email" placeholder="example@example.com" required>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label for="inputDescription" style="margin-top:6px;">Senha	</label>
-                    <div class="col-sm-5">                   
-                        <input type="password" class="form-control" id="password" name="password" placeholder="*******" required>
-                    </div>
-                </div>
-              <div class="form-group">
-                    <div class="col-sm-1">
-                        <input type="submit" id="submit" class="btn btn-primary" value="Cadastrar">
-                    </div>
-                    <div class="col-sm-1">
-                        <input type="submit" class="btn btn-default" value="Limpar Formulário" onclick="limpa_form()">
-                    </div>
+         	<form id="form" action="../../VQ/user/createform" method="GET">
+                <p class="form-group">
+                    <label for="inputUser">Usuário: </label>
+                    <input type="text" id="usuario" name="usuario" placeholder="Nome de Usuário" required>
+                </p>
+                <p class="form-group">
+                    <label for="inputEmail">E-mail: </label>
+                    <input type="e-mail" id="email" name="email" required>
+                </p>                
+                <p class="form-group">
+                    <label for="inputPassword">Senha: </label>
+                    <input type="password" id="password" name="password" required>
+                </p>   
+                <button id="submit">Cadastrar</button>                
+                <button onclick="limpa_form()">Limpar</button>
                 </div>
             </form>
         </div>
