--- a/WebContent/html5/users/newproduto.html
+++ b/WebContent/html5/users/newproduto.html
@@ -7,45 +7,32 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 	<script src="../../js/jquery/jquery-2.1.4.min.js" type="text/javascript"></script>
 	<script src="../../js/jquery/jquery.serializejson.js"	type="text/javascript"></script>
+	<link rel="stylesheet" type="text/css" href="../../css/newproduto.css">
 </head>
     <body>
     	<div id="header"></div>
         <div class="container">
         	<div><h2>Cadastro de Produtos</h2><br></div>
-         	<form id="form" class="form-horizontal" action="../../VQ/produto/createform" method="GET">
-                <div class="form-group">
-                    <label for="inputName" style="margin-top:6px;">Nome</label>
-                    <div class="col-sm-5">                  
-                        <input type="text" class="form-control" id="nome" name="nome" placeholder="Nome do produto ..." required>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label for="inputDescription" style="margin-top:6px;">Descrição</label>
-                    <div class="col-sm-5">                   
-                        <input type="text" class="form-control" id="descricao" name="descricao" placeholder="Descreva o produto ..." required>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label for="inputCategory" style="margin-top:6px;">Categoria</label>
-                    <div class="col-sm-5">                  
-                        <input type="text" class="form-control" id="tipo" name="tipo" placeholder="Categoria do produto ..." required>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label for="inputPrice" style="margin-top:6px;">Valor</label>
-                    <div class="col-sm-5">                    
-                        <input type="text" class="form-control" id="preco" name="preco" placeholder="Valor do produto ..." required>                        
-                    </div>                   
-                </div>
-                <div class="form-group">
-                    <div class="col-sm-1">
-                        <button type="submit" id="submit" class="btn btn-primary" value="Salvar">Salvar</button>
-                    </div>
-                    <div class="col-sm-1">
-                        <button type="submit" class="btn btn-default" value="Limpar Formulário" onclick="limpa_form()">Limpa Formulário</button>
-                    </div>
-                </div>
-            </form>
+            <form id="form" action="../../VQ/produto/createform" method="GET">
+                <p class="form-group">
+                    <label for="inputName">Nome: </label>
+                    <input type="text" id="name" name="nome" required>
+                </p>
+                <p class="form-group">
+                    <label for="inputDescription">Descrição: </label>
+                    <input type="text" id="descricao" name="descricao">
+                </p>
+                <p class="form-group">
+                    <label for="inputCategory">Categoria: </label>
+                    <input type="text" id="tipo" name="tipo" required>
+                </p>
+                <p class="form-group">
+                    <label for="inputPrice">Valor: </label>
+                    <input for="number" id="preco" name="preco" required>
+                </p>  
+                <button>Salvar</button>
+                <button onclick="limpa_form()">Limpar</button>
+            </form>  
         </div>
         <div id="footer"></div>
     <script type="text/javascript">
@@ -63,7 +50,8 @@
     }
     
     $('#form').submit(function(){
-        swal("Produto Cadastrado!","","success")
+    	swal("Produto Cadastrado!","","success")
+    	setTimeout(function () { window.location.reload(); }, 1000);
     });
    
     </script>
