FIX BUTTON COLORS

--- a/WebContent/html5/admin/newpedido.html
+++ b/WebContent/html5/admin/newpedido.html
@@ -201,7 +201,7 @@
 				    		text: "Será gerado um PDF",   
 				    		type: "",   
 				    		showCancelButton: true,   
-				    		confirmButtonColor: "#337ab7",   
+				    		confirmButtonColor: "#141E5F",   
 				    		confirmButtonText: "Sim",   
 				    		cancelButtonText: "No",   
 				    		closeOnConfirm: true,   
@@ -215,7 +215,7 @@
 							    		text: "Pedido Gerado!",   
 							    		type: "",   
 							    		showCancelButton: false,   
-							    		confirmButtonColor: "#337ab7",   
+							    		confirmButtonColor: "#141E5F",   
 							    		confirmButtonText: "Sim",   
 							    		cancelButtonText: "No",   
 							    		closeOnConfirm: false,   
