--- a/WebContent/html5/admin/produtos.html
+++ b/WebContent/html5/admin/produtos.html
@@ -47,7 +47,7 @@ function deletarProduto(id){
 		text: "Deseja realmente deletar este produto?\n (esta ação não poderá ser desfeita)",   
 		type: "",   
 		showCancelButton: true,
-		confirmButtonColor: "#337ab7",   
+		confirmButtonColor: "#141E5F",   
 		confirmButtonText: "Sim",   
 		cancelButtonText: "Não",   
 		closeOnConfirm: false,   
