--- a/WebContent/html5/login.html
+++ b/WebContent/html5/login.html
@@ -10,10 +10,11 @@
         <link rel="stylesheet" type="text/css" href="../css/mycss.css" />
         <script src="../js/jquery/jquery-2.1.4.min.js" type="text/javascript"></script>
 		<script src="../js/jquery/jquery.serializejson.js"	type="text/javascript"></script>
-    </head>
+	</head>
     <body>
          <div class="container login-container">           
             <div class="divcenter">
+                <h1>Virtual Queue</h1>
                 <form method="post" action="admin/home.html">                   
                     <input type="email" id='email' placeholder="E-mail" onfocus="this.placeholder = ''" onblur="this.placeholder = 'E-mail'">                  
                     <input type="password" id='password' placeholder="Senha" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Senha'">
