--- a/WebContent/html5/admin/pedidos.html
+++ b/WebContent/html5/admin/pedidos.html
@@ -18,7 +18,7 @@
 <table id="my-table" class="table table-hover">
   <thead>
   	<tr>
-  		<th>Id</th>
+  		<th>Pedido_id</th>
     	<th>Senha</th>
     	<th>Valor</th>
   	</tr>
