WORKING LOGIN AND REMOVE

--- a/WebContent/html5/admin/newuser.html
+++ b/WebContent/html5/admin/newuser.html
@@ -16,7 +16,7 @@
          	<form id="form" action="../../VQ/user/createform" method="GET">
                 <p class="form-group">
                     <label for="inputUser">Usuário: </label>
-                    <input type="text" id="usuario" name="usuario" placeholder="Nome de Usuário" required>
+                    <input type="text" id="nome" name="nome" placeholder="Nome de Usuário" required>
                 </p>
                 <p class="form-group">
                     <label for="inputEmail">E-mail: </label>
