--- a/WebContent/html5/admin/users.html
+++ b/WebContent/html5/admin/users.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 <script src="../../js/jquery/jquery-2.1.4.min.js" type="text/javascript"></script>
 <script src="../../js/jquery/jquery.serializejson.js" type="text/javascript"></script>
-<script src="../../js/jquery/jquery.dynatable.js" type="text/javascript"></script>
+<script src="../../js/jquery/jquery.dynatable-user.js" type="text/javascript"></script>
 <link href="../../css/jquery.dynatable.css" rel="stylesheet" media="screen">
 </head>
 <body>
@@ -16,7 +16,7 @@
 <table id="my-table" class="table table-hover">
   <thead>
   	<tr>
-  		<th>Id</th>
+  		<th>Nome</th>
   		<th>Email</th>
     	<th>Password</th>
   	</tr>
@@ -39,7 +39,7 @@ $.ajax({
   }
 });
 
-function deletaUser(id){
+function deletaUser(email){
 	swal({   
 		title: "",   
 		text: "Deseja realmente deletar este produto?\n (esta ação não poderá ser desfeita)",   
@@ -55,7 +55,7 @@ function deletaUser(id){
 				$.ajax({
 				     type: "POST",
 				     url: "http://localhost:8080/VirtualQueue/VQ/user/deleta",
-				     data: JSON.stringify(id),
+				     data: email,
 				     contentType: "application/json; charset=utf-8",
 				     dataType: "long",
 				     processData: true,
@@ -68,8 +68,6 @@ function deletaUser(id){
 			});
 	}});
 }
-
-function deletarProduto(id){}
 
 $(document).ready(function(){
 	$("#header").load('menu.html');
