--- a/WebContent/html5/admin/users.html
+++ b/WebContent/html5/admin/users.html
@@ -45,7 +45,7 @@ function deletaUser(email){
 		text: "Deseja realmente deletar este produto?\n (esta ação não poderá ser desfeita)",   
 		type: "",   
 		showCancelButton: true,
-		confirmButtonColor: "#337ab7",   
+		confirmButtonColor: "#141E5F",   
 		confirmButtonText: "Sim",   
 		cancelButtonText: "Não",   
 		closeOnConfirm: false,   
