--- a/WebContent/html5/login.html
+++ b/WebContent/html5/login.html
@@ -15,7 +15,7 @@
          <div class="container login-container">           
             <div class="divcenter">
                 <h1>Virtual Queue</h1>
-                <form method="post" action="admin/home.html">                   
+                <form method="post" action="../VQ/user/login">                   
                     <input type="email" id='email' placeholder="E-mail" onfocus="this.placeholder = ''" onblur="this.placeholder = 'E-mail'">                  
                     <input type="password" id='password' placeholder="Senha" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Senha'">
                     <button>Entrar</button>
