--- a/WebContent/html5/admin/produtos.html
+++ b/WebContent/html5/admin/produtos.html
@@ -70,8 +70,9 @@ function deletarProduto(id){
 			});
 	}});
 }
-function deletaUser(){
-}
+
+function deletaUser(){}
+
 $(document).ready(function(){
 	$("#header").load('menu.html');
 	$("#footer").load('footer.html');
