--- a/WebContent/html5/admin/users.html
+++ b/WebContent/html5/admin/users.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 <script src="../../js/jquery/jquery-2.1.4.min.js" type="text/javascript"></script>
 <script src="../../js/jquery/jquery.serializejson.js" type="text/javascript"></script>
-<script src="../../js/jquery/jquery.dynatable-user.js" type="text/javascript"></script>
+<script src="../../js/jquery/jquery.dynatable.js" type="text/javascript"></script>
 <link href="../../css/jquery.dynatable.css" rel="stylesheet" media="screen">
 </head>
 <body>
@@ -68,6 +68,8 @@ function deletaUser(email){
 			});
 	}});
 }
+
+function deletarProduto(){}
 
 $(document).ready(function(){
 	$("#header").load('menu.html');
