--- a/WebContent/html5/admin/newproduto.html
+++ b/WebContent/html5/admin/newproduto.html
@@ -30,7 +30,7 @@
                     <label for="inputPrice">Valor: </label>
                     <input for="number" id="preco" name="preco" required>
                 </p>  
-                <button>Salvar</button>
+                <button>Cadastrar</button>
                 <button onclick="limpa_form()">Limpar</button>
             </form>  
         </div>
