--- a/WebContent/html5/admin/newuser.html
+++ b/WebContent/html5/admin/newuser.html
@@ -13,7 +13,7 @@
     	<div id="header"></div>
         <div class="container">
         	<div><h2>Cadastro de Usuário</h2><br></div>
-         	<form id="form" action="../../VQ/user/createform" method="GET">
+         	<form action="javascript:verifica();">
                 <p class="form-group">
                     <label for="inputUser">Usuário: </label>
                     <input type="text" id="nome" name="nome" placeholder="Nome de Usuário" required>
@@ -46,10 +46,44 @@
     	 .removeAttr('selected');
     }
     
-    $('#form').submit(function(){
-        swal("Usuário Cadastrado!","","success")
-    });
-   
+    function verifica(){
+    		user = new Object();
+    		user.nome = document.getElementById("nome").value;
+	        user.email = document.getElementById("email").value;
+	        user.password = document.getElementById("password").value;
+	        user.data_exclusao = null;
+	        
+	        		$.ajax({
+					     type: "POST",
+					     url: "http://localhost:8080/VirtualQueue/VQ/user/createform",
+					     data: JSON.stringify(user),
+					     contentType: "application/json; charset=utf-8",
+					     dataType: "json",
+					     processData: true,
+					     success: function (vdata, status, jqXHR) {
+					    	 if (vdata == true) {
+					    		 swal({   
+					    	    		title: "Usuário Cadastrado!",   
+					    	    		text: "",   
+					    	    		type: "",   
+					    	    		showCancelButton: false,   
+					    	    		confirmButtonColor: "#141E5F",   
+					    	    		confirmButtonText: "Sim",   
+					    	    		cancelButtonText: "No",   
+					    	    		closeOnConfirm: true,   
+					    	    		closeOnCancel: false }, 
+					    	    		function(isConfirm){   
+					    	    			window.location = "newuser.html";
+					    	    		});
+							 }else {
+								swal("","Este email já está sendo usado")
+							 }
+					     },
+					     error: function (xhr) {
+					         alert("Erro" + xhr.responseText);
+					     }
+					});
+    	    }
     </script>
     </body>
 </html>
