FIXED LOGIN AND PDF

--- a/WebContent/html5/admin/newpedido.html
+++ b/WebContent/html5/admin/newpedido.html
@@ -18,7 +18,7 @@
 </head>
 <body onload="updateClock()">
 	<div id="header"></div>
-	<div class="container">
+	<div id="container" class="container">
 		<h2>Pedido</h2><br>
 		<div class="form-group">
 			<div class="form-group" id="combo"></div>
@@ -264,10 +264,9 @@
 		function geraPdf() {
 		    var pdf = new jsPDF('p', 'pt', 'letter');
 		    pdf.setFontSize(22);
-		    pdf.text(130, 20, 'Pedido');
 		    // source can be HTML-formatted string, or a reference
 		    // to an actual DOM element from which the text will be scraped.
-		    source = $('#customers')[0];
+		    source = $('#container')[0];
 
 		    // we support special element handlers. Register them with jQuery-style 
 		    // ID selector for either ID or node name. ("#iAmID", "div", "span" etc.)
