--- a/WebContent/html5/admin/newpedido.html
+++ b/WebContent/html5/admin/newpedido.html
@@ -49,12 +49,12 @@
 		
 		<div class="form-group">
 			<h4><label id="senha">Senha: </label></h4>
-			<h4><label id="clock">Data: </label></h4>
+			<h4><label id="data"></label></h4>
+			<h4><label id="clock"></label></h4>
 		</div>
 		<div class="form-group">		
 				<button id="fecha" onclick="fechar_pedido()">Finalizar Pedido</button>
 				<button onclick="verifica_pedido()">Ver dados do Pedido</button>
-			</div>
 		</div>
 		</div>
 		<br><br><br><br><br><br>
@@ -135,8 +135,8 @@
 					cell1.innerHTML = produtolist[selecionado].id;
 					cell2.innerHTML = produtolist[selecionado].nome;
 					cell3.innerHTML = "R$ "+produtolist[selecionado].preco;
-					cell4.innerHTML = "<input type='text' name='quantidade' id='"+produtolist[selecionado].id+"' value='1' onchange='altera_quantidade("+produtolist[selecionado].id+");valor_pedido();' style='width:50px;'><span id='qntd"+produtolist[selecionado].id+"' hidden>"+produtolist[selecionado].quantidade+"</span>";
-					cell5.innerHTML = "<a href='#' class='delete' value='"+produtolist[selecionado].id+"'><img src='../../img/x.png' onclick='removeProduto("+produtolist[selecionado].id+");valor_pedido("+selecionado+");' height='15' width='15'></a><span id='totaldoproduto"+produtolist[selecionado].id+"' hidden>R$"+produtolist[selecionado].preco+"</span>";
+					cell4.innerHTML = "<input type='text' name='quantidade' id='"+produtolist[selecionado].id+"' value='1' onchange='altera_quantidade("+produtolist[selecionado].id+","+produtolist[selecionado].preco+");valor_pedido();' style='width:50px;'><span id='qntd"+produtolist[selecionado].id+"' hidden>"+produtolist[selecionado].quantidade+"</span>";
+					cell5.innerHTML = "<a href='#' class='delete' value='"+produtolist[selecionado].id+"'><img src='../../img/x.png' onclick='removeProduto("+produtolist[selecionado].id+");valor_pedido("+selecionado+");' height='15' width='15'></a><span id='totaldoproduto"+produtolist[selecionado].id+"' hidden>R$ "+produtolist[selecionado].preco+"</span>";
 					p.produtos.push(produtolist[selecionado]);
 				}
 			}else{
@@ -167,21 +167,21 @@
 			$("#valor").html("R$ "+p.valor);
 		}
 		
-		function altera_quantidade(selecionado){
+		function altera_quantidade(selecionado, preco){
 			//Altera a quantidade do item do pedido
 			var qntd = $("#"+selecionado+"").val();
-			$("#qntd"+selecionado+"").text(qntd);//PDF
+			$("#qntd"+selecionado+"").text(qntd);//Quantidade do produto no PDF
 			if (qntd == 0) {
 				swal("","A quantidade deve ser maior ou igual a 1")
 			} else {
 				$("#"+selecionado+"").attr("value", qntd);
+				$("#totaldoproduto"+selecionado+"").text("R$ "+preco*qntd); // Total do produto no PDF
 				for (var i =0; i < p.produtos.length; i++)
 					   if (p.produtos[i].id === selecionado) {
 					      p.produtos[i].quantidade = qntd;
 					      break;
 				}
 			}
-			
 		}
 		
 		function fechar_pedido() {
@@ -261,6 +261,7 @@
 			setInterval('updateClock()', 1000); //Update do relógio a cada segundo
 			$("#header").load('menu.html'); //Inclui o menu no topo da página
 			$("#footer").load('footer.html'); //Inclui o footer
+			$("#data").text(new Date().getDate()+"/"+new Date().getDay()+"/"+new Date().getFullYear());
 		});
 		
 		function geraPdf() {
