--- a/WebContent/html5/admin/newproduto.html
+++ b/WebContent/html5/admin/newproduto.html
@@ -5,9 +5,10 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="../../css/newproduto.css">
 	<script src="../../js/jquery/jquery-2.1.4.min.js" type="text/javascript"></script>
 	<script src="../../js/jquery/jquery.serializejson.js"	type="text/javascript"></script>
-	<link rel="stylesheet" type="text/css" href="../../css/newproduto.css">
+	<script src="../../js/menuandfooter.js"	type="text/javascript"></script>
 </head>
     <body>
     	<div id="header"></div>
@@ -35,12 +36,7 @@
             </form>  
         </div>
         <div id="footer"></div>
-    <script type="text/javascript">
-    $(document).ready(function(){
-		$("#header").load('menu.html');
-		$("#footer").load('footer.html');
-	});
-    
+    <script>
     function limpa_form(){	
     	$(':input','#form')
     	 .not(':button, :submit, :reset, :hidden')
