--- a/WebContent/html5/admin/users.html
+++ b/WebContent/html5/admin/users.html
@@ -2,11 +2,12 @@
 <html>
 <head>
 <meta charset="UTF-8"><title>Virtual Queue</title>
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-<script src="../../js/jquery/jquery-2.1.4.min.js" type="text/javascript"></script>
-<script src="../../js/jquery/jquery.serializejson.js" type="text/javascript"></script>
-<script src="../../js/jquery/jquery.dynatable.js" type="text/javascript"></script>
-<link href="../../css/jquery.dynatable.css" rel="stylesheet" media="screen">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+	<link href="../../css/jquery.dynatable.css" rel="stylesheet" media="screen">
+	<script src="../../js/jquery/jquery-2.1.4.min.js" type="text/javascript"></script>
+	<script src="../../js/jquery/jquery.serializejson.js" type="text/javascript"></script>
+	<script src="../../js/jquery/jquery.dynatable.js" type="text/javascript"></script>
+	<script src="../../js/menuandfooter.js"	type="text/javascript"></script>
 </head>
 <body>
 <div id="header"></div>
@@ -69,11 +70,6 @@ function deletaUser(email){
 }
 
 function deletarProduto(){}
-
-$(document).ready(function(){
-	$("#header").load('menu.html');
-	$("#footer").load('footer.html');
-});
 </script>
 </body>
 </html>
