--- a/WebContent/html5/admin/newpedido.html
+++ b/WebContent/html5/admin/newpedido.html
@@ -50,7 +50,7 @@
 		</div>
 		
 		<div class="form-group">
-			<h4><label id="senha">Senha: </label></h4>
+			<h4><label id="senha"></label></h4>
 			<h4><label id="data"></label></h4>
 			<h4><label id="clock"></label></h4>
 		</div>
