--- a/WebContent/html5/admin/newproduto.html
+++ b/WebContent/html5/admin/newproduto.html
@@ -18,7 +18,7 @@
             <form id="form" action="../../VQ/produto/createform" method="GET">
                 <p class="form-group">
                     <label for="inputName">Nome: </label>
-                    <input type="text" id="name" name="nome" required>
+                    <input type="text" id="name" name="nome" autofocus="autofocus" required>
                 </p>
                 <p class="form-group">
                     <label for="inputDescription">Descrição: </label>
