--- a/WebContent/html5/users/menu.html
+++ b/WebContent/html5/users/menu.html
@@ -22,7 +22,7 @@
                     <li><a class="principal" href="home.html"><span class="glyphicon glyphicon-home"></span> HOME</a></li>
                     <li><a class="principal"><span class="glyphicon glyphicon-shopping-cart"></span> PEDIDO</a>
                         <ul>
-                            <li><a class="sub" href="newpedido.html">GERAR PEDIDO</a></li>
+                            <li><a class="sub" href="newpedido.html">GERAR PEDIDOS</a></li>
                             <li><a class="sub" href="pedidos.html">LISTAR PEDIDOS</a></li>
                         </ul>
                     </li>                               
