--- a/WebContent/html5/admin/menu.html
+++ b/WebContent/html5/admin/menu.html
@@ -22,19 +22,19 @@
                     <li><a class="principal" href="home.html"><span class="glyphicon glyphicon-home"></span> HOME</a></li>
                     <li><a class="principal"><span class="glyphicon glyphicon-apple"></span> PRODUTO</a>
                         <ul>
-                            <li><a class="sub" href="newproduto.html">CADASTRO DE PRODUTOS</a></li>
+                            <li><a class="sub" href="newproduto.html">CADASTRAR PRODUTOS</a></li>
                             <li><a class="sub" href="produtos.html">LISTAR PRODUTOS</a></li>
                         </ul>
                     </li>
                     <li><a class="principal"><span class="glyphicon glyphicon-shopping-cart"></span> PEDIDO</a>
                         <ul>
-                            <li><a class="sub" href="newpedido.html">GERAR PEDIDO</a></li>
+                            <li><a class="sub" href="newpedido.html">GERAR PEDIDOS</a></li>
                             <li><a class="sub" href="pedidos.html">LISTAR PEDIDOS</a></li>
                         </ul>
                     </li>  
                     <li><a class="principal"><span class="glyphicon glyphicon-user"></span> USUÁRIOS</a>
                         <ul>
-                            <li><a class="sub" href="newuser.html">CADASTRAR USUÁRIO</a></li>
+                            <li><a class="sub" href="newuser.html">CADASTRAR USUÁRIOS</a></li>
                             <li><a class="sub" href="users.html">LISTAR USUÁRIOS</a></li>
                         </ul>
                     </li>                             
