WORKING ON PASSWORD AND MD5

--- a/WebContent/html5/login.html
+++ b/WebContent/html5/login.html
@@ -14,7 +14,8 @@
     <body>
          <div class="container login-container">           
             <div class="divcenter">
-                <h1>Virtual Queue</h1>
+                <!-- <h1>Virtual Queue</h1> -->
+                <img alt="logo" src="../img/logo2.png" width="250px">
                 <form action="javascript:valida();">
                     <input type="email" id='email' placeholder="E-mail" onfocus="this.placeholder = ''" onblur="this.placeholder = 'E-mail'">                  
                     <input type="password" id='password' placeholder="Senha" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Senha'">
