--- a/WebContent/html5/users/produtos.html
+++ b/WebContent/html5/users/produtos.html
@@ -9,44 +9,61 @@
 	<script src="../../js/jquery/jquery-2.1.4.min.js" type="text/javascript"></script>
 	<script src="../../js/jquery/jquery.serializejson.js"	type="text/javascript"></script>
 	<script src="../../js/jquery/jquery.dynatable.js" type="text/javascript"></script>
-	<script src="../../js/menuandfooter.js"	type="text/javascript"></script>	
+	<script src="../../js/menuandfooter.js"	type="text/javascript"></script>
+	<script src='https://cdn.vaadin.com/vaadin-elements/latest/webcomponentsjs/webcomponents-lite.js'></script>
+  	<link href='https://cdn.vaadin.com/vaadin-elements/latest/vaadin-grid/vaadin-grid.html' rel='import'>
 </head>
 <body>
 <div id="header"></div>
 <div class="container">
-<div><h2>Lista de Produtos</h2><br></div>
-<div>
-<table id="my-table" class="table table-hover">
-  <thead>
-  	<tr>
-  		<th style="color: #000000;">Id</th>
-    	<th>Nome</th>
-    	<th>Descricao</th>
-    	<th>Tipo</th>
-    	<th>Preco</th>
-  	</tr>
-  </thead>
-  <tbody>
-  </tbody>
-</table>
-</div>
+<div class="form-group"><h2>Lista de Produtos</h2></div>
+<vaadin-grid  frozen-columns="1">
+  <table>
+  	<colgroup>
+      <col name="id" header-text="Código" style="">
+      <col name="nome" header-text="Nome">
+      <col name="descricao" header-text="Descrição" width="300px">
+      <col name="tipo" header-text="Tipo">
+      <col name="preco" header-text="Preço">
+    </colgroup>
+  </table>
+</vaadin-grid>
 </div>
 <div id="footer"></div>
 <script>
-$.ajax({
-  url: '/VirtualQueue/VQ/produto/list',
-  success: function(data){
-    $('#my-table').dynatable({		
-      dataset: {records: data}
-    });
+  var produtolist = [];
+  var deletar;
+  lista();
+  function lista() {
+		var list = "http://localhost:8080/VirtualQueue/VQ/produto/list";
+		$.ajax({
+			type : 'GET',
+			url : list,
+			crossDomain : true,
+			dataType : "json",
+			success : carregaProduto, // função de retorno dos produtolist
+			error : function(xhr, status, error) {
+				var err = eval("(" + xhr.responseText + ")");
+				alert(err.Message);
+			}
+		});
+	}
+  
+  function carregaProduto(data) { // gerar Combo dos produtolist
+		produtolist = data;
+  		var grid = grid || document.querySelector("vaadin-grid");
+		HTMLImports.whenReady(function() {
+		    // code
+		    grid.items = produtolist;
+		    // Optionally set the column names in JS
+		    grid.columns[0].name = "id";
+		    grid.columns[1].name = "nome";
+		    grid.columns[2].name = "descricao";
+		    grid.columns[3].name = "tipo";
+		    grid.columns[4].name = "preco";
+		    // end-code
+		});
   }
-});
-
-function deletarProduto(id){
-	swal("","Você não tem permissão para deletar um produto")
-}
-
-function deletaUser(){}
 </script>
 </body>
 </html>
