--- a/WebContent/html5/users/produtos.html
+++ b/WebContent/html5/users/produtos.html
@@ -20,9 +20,9 @@
 <vaadin-grid  frozen-columns="1">
   <table>
   	<colgroup>
-      <col name="id" header-text="Código" style="">
+      <col name="id" header-text="Código" width="70px">
       <col name="nome" header-text="Nome">
-      <col name="descricao" header-text="Descrição" width="300px">
+      <col name="descricao" header-text="Descrição" width="600px">
       <col name="tipo" header-text="Tipo">
       <col name="preco" header-text="Preço">
     </colgroup>
