--- a/WebContent/html5/admin/produtos.html
+++ b/WebContent/html5/admin/produtos.html
@@ -31,7 +31,7 @@
 </div>
 <div id="footer"></div>
 <script>
-  var produtolist = [];
+  var produtolist = new Array();
   var deletar;
   lista();
   function lista() {
@@ -51,7 +51,7 @@
   
   function carregaProduto(data) { // gerar Combo dos produtolist
 		produtolist = data;
-  		var grid = grid || document.querySelector("vaadin-grid");
+		var grid = grid || document.querySelector("vaadin-grid");
   		grid.header.addRow(0, ["","<button class='btn btn-default' onclick='deletarProduto(deletar)'>Deletar</button>"]);
 		HTMLImports.whenReady(function() {
 		    // code
