--- a/WebContent/html5/admin/pedidos.html
+++ b/WebContent/html5/admin/pedidos.html
@@ -4,41 +4,74 @@
 <title>Virtual Queue</title>
 <meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<!-- Bootstrap -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+	<!-- Jquery -->
 	<link href="../../css/jquery.dynatable.css" rel="stylesheet" media="screen">
 	<script src="../../js/jquery/jquery-2.1.4.min.js" type="text/javascript"></script>
 	<script src="../../js/jquery/jquery.serializejson.js"	type="text/javascript"></script>
 	<script src="../../js/jquery/jquery.dynatable.js" type="text/javascript"></script>
+	<!-- Import do menu e do footer -->
 	<script src="../../js/menuandfooter.js"	type="text/javascript"></script>
+	<!-- Vaadin Grid -->
+	<script src='https://cdn.vaadin.com/vaadin-elements/latest/webcomponentsjs/webcomponents-lite.js'></script>
+  	<link href='https://cdn.vaadin.com/vaadin-elements/latest/vaadin-grid/vaadin-grid.html' rel='import'>
 </head>
 <body>
 <div id="header"></div>
 <div class="container">
 <div><h2>Lista de Pedidos</h2><br></div>
-<div>
-<table id="my-table" class="table table-hover">
-  <thead>
-  	<tr>
-  		<th>Id</th>
-    	<th>Senha</th>
-    	<th>Valor</th>
-  	</tr>
-  </thead>
-  <tbody>
-  </tbody>
-</table>
-</div>
+<vaadin-grid  selection-mode="multi" frozen-columns="1">
+  <table>
+  	<colgroup>
+      <col name="id" header-text="Código" width="110px">
+      <col name="valor" header-text="Valor">
+      <col name="senha" header-text="Senha">
+    </colgroup>
+  </table>
+</vaadin-grid>
 </div>
 <div id="footer"></div>
 <script>
-$.ajax({
-	  url: '/VirtualQueue/VQ/pedido/list',
-	  success: function(data){
-	    $('#my-table').dynatable({		
-	      dataset: {records: data}
-	    });
-	  }
-});
+  var pedidolist = [];
+  deletar = [];
+  
+  lista();
+  function lista() { //Pega a lista dos produtos do banco de dados
+		var list = "http://localhost:8080/VirtualQueue/VQ/pedido/list";
+		$.ajax({
+			type : 'GET',
+			url : list,
+			crossDomain : true,
+			dataType : "json",
+			success : geraTabela, // função de retorno dos pedidolist
+			error : function(xhr, status, error) {
+				var err = eval("(" + xhr.responseText + ")");
+				alert(err.Message);
+			}
+		});
+	}
+  
+  function geraTabela(data) { // Gera a tabela com os dados coletados
+		pedidolist = data;
+		var grid = grid || document.querySelector("vaadin-grid");
+		HTMLImports.whenReady(function() {
+		    grid.items = pedidolist;
+		    // Setando as colunas
+		    grid.columns[0].name = "id";
+		    grid.columns[2].name = "valor";
+		    grid.columns[3].name = "senha";
+		});
+		// Evento de seleção do checkbox
+		grid.addEventListener("select", function() {
+			  deletar = [];
+			  grid.selection.selected(function(index) {
+			    if(index != null)			    
+			      deletar.push(pedidolist[index].email);
+			      console.log(deletar);
+			  });
+		});
+  } 
 </script>
 </body>
 </html>
