--- a/WebContent/html5/admin/produtos.html
+++ b/WebContent/html5/admin/produtos.html
@@ -4,12 +4,16 @@
 <title>Virtual Queue</title>
 <meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<!-- Bootstrap -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+	<!-- Jquery -->
 	<link href="../../css/jquery.dynatable.css" rel="stylesheet" media="screen">
 	<script src="../../js/jquery/jquery-2.1.4.min.js" type="text/javascript"></script>
 	<script src="../../js/jquery/jquery.serializejson.js"	type="text/javascript"></script>
 	<script src="../../js/jquery/jquery.dynatable.js" type="text/javascript"></script>
+	<!-- Import do menu e do footer -->
 	<script src="../../js/menuandfooter.js"	type="text/javascript"></script>
+	<!-- Vaadin Grid -->
 	<script src='https://cdn.vaadin.com/vaadin-elements/latest/webcomponentsjs/webcomponents-lite.js'></script>
   	<link href='https://cdn.vaadin.com/vaadin-elements/latest/vaadin-grid/vaadin-grid.html' rel='import'>
 </head>
@@ -20,7 +24,7 @@
 <vaadin-grid  selection-mode="multi" frozen-columns="1">
   <table>
   	<colgroup>
-      <col name="id" header-text="Código" width="70px">
+      <col name="id" header-text="Código">
       <col name="nome" header-text="Nome">
       <col name="descricao" header-text="Descrição" width="600px">
       <col name="tipo" header-text="Tipo">
@@ -31,17 +35,18 @@
 </div>
 <div id="footer"></div>
 <script>
-  var produtolist = new Array();
-  var deletar;
+  var produtolist = [];
+  deletar = [];
+  
   lista();
-  function lista() {
+  function lista() { //Pega a lista dos produtos do banco de dados
 		var list = "http://localhost:8080/VirtualQueue/VQ/produto/list";
 		$.ajax({
 			type : 'GET',
 			url : list,
 			crossDomain : true,
 			dataType : "json",
-			success : carregaProduto, // função de retorno dos produtolist
+			success : geraTabela, // função de retorno dos produtolist
 			error : function(xhr, status, error) {
 				var err = eval("(" + xhr.responseText + ")");
 				alert(err.Message);
@@ -49,31 +54,34 @@
 		});
 	}
   
-  function carregaProduto(data) { // gerar Combo dos produtolist
+  function geraTabela(data) { // Gera a tabela com os dados coletados
 		produtolist = data;
 		var grid = grid || document.querySelector("vaadin-grid");
-  		grid.header.addRow(0, ["","<button class='btn btn-default' onclick='deletarProduto(deletar)'>Deletar</button>"]);
+		if(produtolist.length != 0){ // Botão de deletar
+	  		grid.header.addRow(0, ["","<button id='delete' class='btn btn-default' onclick='deletarProduto(deletar)'>Deletar</button>"]);
+		}
 		HTMLImports.whenReady(function() {
-		    // code
 		    grid.items = produtolist;
-		    // Optionally set the column names in JS
+		    // Setando as colunas
 		    grid.columns[0].name = "id";
 		    grid.columns[1].name = "nome";
 		    grid.columns[2].name = "descricao";
 		    grid.columns[3].name = "tipo";
 		    grid.columns[4].name = "preco";
-		    // end-code
 		});
+		// Evento de seleção do checkbox
 		grid.addEventListener("select", function() {
+			  deletar = [];
 			  grid.selection.selected(function(index) {
 			    if(index != null)			    
-			      deletar = produtolist[index].id;
+			      deletar.push(produtolist[index].id);
+			      console.log(deletar);
 			  });
 		});
   } 
   
   function deletarProduto(deletar){
-		if (deletar == null) {
+		if (deletar.length == 0) {
 			swal("","Selecione ao menos um produto...")
 		} else {
 			swal({   
@@ -88,20 +96,22 @@
 				closeOnCancel: true }, 
 				function(isConfirm){   
 					if (isConfirm) {
-						$.ajax({
-						     type: "POST",
-						     url: "http://localhost:8080/VirtualQueue/VQ/produto/deleta",
-						     data: JSON.stringify(deletar),
-						     contentType: "application/json; charset=utf-8",
-						     dataType: "long",
-						     processData: true,
-						     success: function (vdata, status, jqXHR) {
-						    	 window.location = "produtos.html";
-						     },
-						     error: function (xhr) {
-						         alert("Erro" + xhr.responseText);
-						     }
-					});
+						deletar.forEach(function(value) { //Remove do banco de dados cada produto selecionado
+							$.ajax({
+							     type: "POST",
+							     url: "http://localhost:8080/VirtualQueue/VQ/produto/deleta",
+							     data: JSON.stringify(value),
+							     contentType: "application/json; charset=utf-8",
+							     dataType: "json",
+							     processData: true,
+							     success: function (vdata, status, jqXHR) {
+							    	 window.location = "produtos.html";
+							     },
+							     error: function (xhr) {
+							         alert("Erro" + xhr.responseText);
+							     }
+							});
+						});
 			}});
 		}
 	}
