--- a/WebContent/html5/admin/users.html
+++ b/WebContent/html5/admin/users.html
@@ -2,75 +2,116 @@
 <html>
 <head>
 <meta charset="UTF-8"><title>Virtual Queue</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<!-- Bootstrap -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+	<!-- Jquery -->
 	<link href="../../css/jquery.dynatable.css" rel="stylesheet" media="screen">
 	<script src="../../js/jquery/jquery-2.1.4.min.js" type="text/javascript"></script>
-	<script src="../../js/jquery/jquery.serializejson.js" type="text/javascript"></script>
+	<script src="../../js/jquery/jquery.serializejson.js"	type="text/javascript"></script>
 	<script src="../../js/jquery/jquery.dynatable.js" type="text/javascript"></script>
+	<!-- Import do menu e do footer -->
 	<script src="../../js/menuandfooter.js"	type="text/javascript"></script>
+	<!-- Vaadin Grid -->
+	<script src='https://cdn.vaadin.com/vaadin-elements/latest/webcomponentsjs/webcomponents-lite.js'></script>
+  	<link href='https://cdn.vaadin.com/vaadin-elements/latest/vaadin-grid/vaadin-grid.html' rel='import'>
 </head>
 <body>
 <div id="header"></div>
 <div class="container">
-<div><h2>Lista de Usuários</h2><br></div>
-<div>
-<table id="my-table" class="table table-hover">
-  <thead>
-  	<tr>
-  		<th>Nome</th>
-  		<th>Email</th>
-  		<th>Privilegio</th>
-  	</tr>
-  </thead>
-  <tbody>
-  </tbody>
-</table>
-</div>
+<h2>Lista de Usuários</h2>
+<vaadin-grid  selection-mode="multi" frozen-columns="1">
+  <table>
+  	<colgroup>
+      <col name="id" header-text="Código" width="110px">
+      <col name="nome" header-text="Nome">
+      <col name="email" header-text="Email">
+      <col name="privilegio" header-text="Privilégio">
+    </colgroup>
+  </table>
+</vaadin-grid>
 </div>
 <div id="footer"></div>
 <script>
-$.ajax({
-  url: '/VirtualQueue/VQ/user/list',
-  success: function(data){
-    $('#my-table').dynatable({
-      dataset: {
-        records: data
-      }
-    });
-  }
-});
-
-function deletaUser(email){
-	swal({   
-		title: "",   
-		text: "Deseja realmente deletar este produto?\n (esta ação não poderá ser desfeita)",   
-		type: "",   
-		showCancelButton: true,
-		confirmButtonColor: "#141E5F",   
-		confirmButtonText: "Sim",   
-		cancelButtonText: "Não",   
-		closeOnConfirm: false,   
-		closeOnCancel: true }, 
-		function(isConfirm){   
-			if (isConfirm) {
-				$.ajax({
-				     type: "POST",
-				     url: "http://localhost:8080/VirtualQueue/VQ/user/deleta",
-				     data: email,
-				     contentType: "application/json; charset=utf-8",
-				     dataType: "long",
-				     processData: true,
-				     success: function (vdata, status, jqXHR) {
-				    	 window.location = "users.html";
-				     },
-				     error: function (xhr) {
-				         alert("Erro" + xhr.responseText);
-				     }
-			});
-	}});
-}
-
-function deletarProduto(){}
+  var userlist = [];
+  deletar = [];
+  
+  lista();
+  function lista() { //Pega a lista dos produtos do banco de dados
+		var list = "http://localhost:8080/VirtualQueue/VQ/user/list";
+		$.ajax({
+			type : 'GET',
+			url : list,
+			crossDomain : true,
+			dataType : "json",
+			success : geraTabela, // função de retorno dos userlist
+			error : function(xhr, status, error) {
+				var err = eval("(" + xhr.responseText + ")");
+				alert(err.Message);
+			}
+		});
+	}
+  
+  function geraTabela(data) { // Gera a tabela com os dados coletados
+		userlist = data;
+		var grid = grid || document.querySelector("vaadin-grid");
+		if(userlist.length != 0){ // Botão de deletar
+	  		grid.header.addRow(0, ["","<button id='delete' class='btn btn-default' onclick='deletarProduto(deletar)'>Deletar</button>"]);
+		}
+		HTMLImports.whenReady(function() {
+		    grid.items = userlist;
+		    // Setando as colunas
+		    grid.columns[0].name = "id";
+		    grid.columns[1].name = "nome";
+		    grid.columns[2].name = "email";
+		    grid.columns[3].name = "privilegio";
+		});
+		// Evento de seleção do checkbox
+		grid.addEventListener("select", function() {
+			  deletar = [];
+			  grid.selection.selected(function(index) {
+			    if(index != null)			    
+			      deletar.push(userlist[index].email);
+			      console.log(deletar);
+			  });
+		});
+  } 
+  
+  function deletarProduto(deletar){
+		if (deletar.length == 0) {
+			swal("","Selecione ao menos um produto...")
+		} else {
+			swal({   
+				title: "",   
+				text: "Deseja realmente deletar este produto?\n (esta ação não poderá ser desfeita)",   
+				type: "",   
+				showCancelButton: true,
+				confirmButtonColor: "#141E5F",   
+				confirmButtonText: "Sim",   
+				cancelButtonText: "Não",   
+				closeOnConfirm: false,   
+				closeOnCancel: true }, 
+				function(isConfirm){   
+					if (isConfirm) {
+						deletar.forEach(function(value) { //Remove do banco de dados cada produto selecionado
+							$.ajax({
+							     type: "POST",
+							     url: "http://localhost:8080/VirtualQueue/VQ/user/deleta",
+							     data: value,
+							     contentType: "application/json; charset=utf-8",
+							     dataType: "json",
+							     processData: true,
+							     success: function (vdata, status, jqXHR) {
+							    	 window.location = "users.html";
+							     },
+							     error: function (xhr) {
+							         alert("Erro" + xhr.responseText);
+							     }
+							});
+						});
+			}});
+		}
+	}
 </script>
 </body>
 </html>
